--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -2,5 +2,7 @@
 @import "./helpers/variables";
 @import "../../../node_modules/bootstrap/scss/bootstrap";
 
-
-@import './layout/index.scss'
+@import "./base/_reset.scss";
+@import "./layout/_header.scss";
+@import './layout/_index.scss';
+@import "./layout/footer.scss";
